force-app/main/default/objects/Vendor__c/Vendor__c.object-meta.xml
<CustomObject>
    <label>Vendor</label>
    <nameField><label>Vendor Name</label><trackHistory>false</trackHistory><type>Text</type></nameField>
    <pluralLabel>Vendors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>