force-app/main/default/objects/Vendor__c/fields/Email__c.field-meta.xml
<CustomField><fullName>Email__c</fullName><externalId>false</externalId><label>Email</label><required>false</required><trackTrending>false</trackTrending><type>Email</type></CustomField>