force-app/main/default/objects/Vendor__c/fields/Service_Type__c.field-meta.xml
<CustomField><fullName>Service_Type__c</fullName><externalId>false</externalId><label>Service Type</label><type>MultiselectPicklist</type><visibleLines>10</visibleLines><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Catering</fullName><default>false</default><label>Catering</label></value><value><fullName>Decor</fullName><default>false</default><label>Decor</label></value><value><fullName>Photography</fullName><default>false</default><label>Photography</label></value><value><fullName>Videography</fullName><default>false</default><label>Videography</label></value><value><fullName>Lighting</fullName><default>false</default><label>Lighting</label></value><value><fullName>Stage Setup</fullName><default>false</default><label>Stage Setup</label></value><value><fullName>Makeup Artist</fullName><default>false</default><label>Makeup Artist</label></value><value><fullName>DJ/Music</fullName><default>false</default><label>DJ/Music</label></value><value><fullName>Transportation</fullName><default>false</default><label>Transportation</label></value><value><fullName>Hosting/Anchor</fullName><default>false</default><label>Hosting/Anchor</label></value></valueSetDefinition></valueSet></CustomField>